[package]
name = "rs"
version = "0.1.0"
authors = ["Piotr Szyma <thompson2908@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.6"
mod_exp = "1.0.1"

[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
